# DEViLBOX

./: .clauderules  .dockerignore  .env.docker.example  .gitignore  .mcp.json  0x0580  ASID_HARDWARE_SUPPORT.md  AUDIT_CHECKLIST.md  AUDIT_GRID_ENHANCEMENTS.md  AUDIT_MPC_RESAMPLER.md  AUDIT_REPORT.md  AUDIT_SUMMARY.txt  AmigaFilter.worklet.js  BUILDING.md  BUZZMACHINES_COMPLETE.md  BUZZMACHINES_IMPLEMENTATION.md  Buzzmachine.worklet.js  CADDY_DEPLOYMENT.md  CLAUDE.md  CODE_REVIEW_PreTracker_Worklet.md  COMPLETE_TRACKER_PROMPT.md  CONVERSION_PROMPT.md  DELIVERABLES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SETUP.md  DESIGN_SYSTEM.md  DEVELOPMENT_GUIDELINES.md  DEV_SCRIPTS.md  DJ_UADE_PRERENDER_COMPLETE.md  DOCKER_DEPLOYMENT.md  DevilboxDSP.wasm  DevilboxDSP.wat  Dockerfile.backend  Dockerfile.frontend  EFFECT_COMMANDS_AUDIT.md  ESAI_FIX_DIAGNOSTIC_2026-03-06.md  EXPORT_FORMAT_SPEC.md  FEATURES.md  FILE_IMPORT_TEST.md  (+156 more)
.serena/: project.yml
Reference Docs/: Replayers.info  Replayers.info.uaem  Replayers.uaem
Vestax Mixer/: VestaxMixer_PMC-05.mtl  uploads_files_897209_VestaxMixer_PMC-05.fbx
actionamics-wasm/: build.sh
activisionpro-wasm/: build.sh
adplug/: AdPlugPlayer.wasm
adplug-wasm/: CMakeLists.txt
adplug-wasm/adplug-adplug-2.4/src/: emuopl.cpp  fmopl.c  fmopl.h  nukedopl.c  nukedopl.h
adplug-wasm/patches/: a2m-v2-null-pointer-fix.patch  lds_pis_protected.patch  protrack_accessors.patch
adplug-wasm/src/: adplug_bridge.cpp  adplug_wasm.cpp  insts_dat.h  standard_bnk.h
aelapse/: Aelapse.wasm  Aelapse.worklet.js  AelapseUI.js  AelapseUI.wasm
aeolus/: Aeolus.js  Aeolus.worklet.js
aeolus-wasm/: CMakeLists.txt
aeolus-wasm/src/: addsynth.cc  aeolus_bridge.cpp  aeolus_stops.h  global.h
agc/: AGC.worklet.js
agc-wasm/: AGCWASM.cpp  CMakeLists.txt
ami-sampler/: AmiSampler.wasm
ami-sampler-wasm/: AmiSamplerWASM.cpp  CMakeLists.txt
amsynth/: Amsynth.js  Amsynth.wasm  AmsynthUI.js
amsynth-wasm/: .gitignore  CMakeLists.txt
amsynth-wasm/common/: amsynth_bridge.cpp  config.h
another-delay-wasm/: AnotherDelayWASM.cpp  CMakeLists.txt
artistic-delay/: ArtisticDelay.js  ArtisticDelay.worklet.js
artistic-delay-wasm/: ArtisticDelayWASM.cpp  CMakeLists.txt
artofnoise/: ArtOfNoise.worklet.js
artofnoise-wasm/: CMakeLists.txt
artofnoise-wasm/src/: aon_player.c  aon_player.h  aon_wrapper.c
asap-wasm/: CMakeLists.txt
asap-wasm/src/: asap_wasm.c
assembly/: Periods.ts  Scheduler.ts  TB303.ts  index.ts
assets/: ADPCMmonoParser-Dj4u0fUc.js  ADPCMmonoParser-hzOUYt8F.js  AGCEffect-D4n4G4BP.js  AMFParser-C-PGXJmB.js  AMFParser-DmCRrykC.js  AMOSMusicBankExporter-Bx1bVkvH.js  AMOSMusicBankParser-BeX5Hrg-.js  AMOSMusicBankParser-CB-UXPgR.js  AMSParser-BZUyYWxr.js  AMSynthControls-Bn9sFMO1.js  AYParser-Nu0BOGFV.js  AYParser-OiqP0bGC.js  ActionamicsEncoder-CxUzspTM.js  ActionamicsExporter-CyWPt3ZT.js  ActionamicsParser-BL5E5i58.js  ActionamicsParser-ClbLJkoh.js  ActivisionProExporter-BAr3tAak.js  ActivisionProParser-B6Eoa_b2.js  ActivisionProParser-Dzt6J4vS.js  AdPlugExporter-DwxlB-cL.js  AdPlugParser-B_YVZZlR.js  AdPlugPlayer-CpyKSX05.js  AdPlugWasmExtractor-DlN6_2a0.js  AeolusControls-CTJ4gGNS.js  AlcatrazPackerParser-9_HRU-FG.js  AlcatrazPackerParser-Dbjif2zN.js  AmigaFormatParsers-CSczdqTd.js  Anders0landParser-CQqty7A_.js  Anders0landParser-DrDVFzPH.js  AndrewPartonParser-BkZW2RB9.js  AndrewPartonParser-Cr3Dooet.js  ArrangementKeyboardShortcuts-DvPf7hcZ.js  ArtOfNoiseEngine-C_TmE28q.js  ArtOfNoiseParser-4YM8QbJl.js  ArtOfNoiseParser-Cm-zeFQa.js  ArtisticDelayEffect-C4Rs1Iwx.js  AshleyHoggParser-DoeGUkLn.js  AshleyHoggParser-yHRHZP8w.js  AudioContextSingleton-BmUieoGD.js  AudioDataBus-DGyOo1ms.js  (+1521 more)
autosat/: AutoSat.wasm  AutoSat.worklet.js
autosat-wasm/: AutoSatWASM.cpp  CMakeLists.txt
autotune/: AutoTune.worklet.js
bass-enhancer/: BassEnhancer.js  BassEnhancer.worklet.js
bass-enhancer-wasm/: BassEnhancerWASM.cpp  CMakeLists.txt
bd/: Bd.wasm  Bd.worklet.js
bd-wasm/: CMakeLists.txt
bd-wasm/src/: bd_harness.c
bd-wasm/src/bd/: ben_daglish.c  ben_daglish.h
beat-breather-wasm/: BeatBreatherWASM.cpp  CMakeLists.txt
binaural-panner-wasm/: BinauralPannerWASM.cpp  CMakeLists.txt
bitta-wasm/: BittaWASM.cpp  (+1 more)
cabinet-sim-wasm/: CMakeLists.txt  CabinetSimWASM.cpp
calf-mono-wasm/: CMakeLists.txt
calf-mono-wasm/common/: calf_mono_bridge.cpp
calf-mono-wasm/src/: calf_mono_standalone.cpp  calf_mono_standalone.h
calf-phaser-wasm/: CMakeLists.txt  CalfPhaserWASM.cpp
cheesecutter-wasm/: CMakeLists.txt
cheesecutter-wasm/src/: cc_bridge.cpp  cpu6502.c  cpu6502.h
cinter4-wasm/: CMakeLists.txt  HANDOFF.md  test-node.cjs
cinter4-wasm/src/cinter4/: cinter4.c  cinter4.h  cinter4_wrapper.c  paula_soft.c  paula_soft.h
clipper-wasm/: CMakeLists.txt  ClipperWASM.cpp
cpsycle-wasm/: CMakeLists.txt  cpsycle_harness.c  cpsycle_plugin.c  cpsycle_stubs.c
cpsycle-wasm/cpsycle-lib/: CMakeLists.txt
cpsycle-wasm/cpsycle-lib/audio/src/: duplicator.c  duplicator2.c  library.c  machinefactory.c  player.c  player.h  plugincatcher.c  psy2converter.c  psy2loader.c  xmsampler.c  xmsamplerchannel.h
cpsycle-wasm/cpsycle-lib/container/src/: properties.c
cpsycle-wasm/cpsycle-lib/detail/: cpu.h  os.h  portable.h  psydef.h
cpsycle-wasm/cpsycle-lib/dsp/src/: alignedalloc.c  quantize.c
cpsycle-wasm/cpsycle-lib/file/src/: inireader.c  propertiesio.c
cpsycle-wasm/cpsycle-lib/thread/src/: lock.c  thread.c
davidwhittaker-wasm/: CMakeLists.txt  build.sh
davidwhittaker-wasm/src/: davidwhittaker.c  davidwhittaker.h  davidwhittaker_synth.c
deesser-wasm/: CMakeLists.txt  DeEsserWASM.cpp
della-wasm/: CMakeLists.txt  DellaWASM.cpp
demucs-wasm/: CMakeLists.txt
digmug-wasm/: CMakeLists.txt  build.sh
digmug-wasm/src/: digmug.c  digmug.h  digmug_synth.c
distortion-shaper-wasm/: CMakeLists.txt  DistortionShaperWASM.cpp
dragonfly-hall-wasm/: CMakeLists.txt  DragonflyHallWASM.cpp
dragonfly-plate-wasm/: CMakeLists.txt  DragonflyPlateWASM.cpp
dragonfly-room-wasm/: CMakeLists.txt  DragonflyRoomWASM.cpp
driva-wasm/: CMakeLists.txt  DrivaWASM.cpp
(+26000 files in other folders)
