cmake_minimum_required(VERSION 3.20)
project(DeEsser VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 17)
add_executable(DeEsser DeEsserWASM.cpp)
set_target_properties(DeEsser PROPERTIES OUTPUT_NAME "DeEsser" SUFFIX ".js" RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/../public/deesser")
target_link_options(DeEsser PRIVATE "SHELL:-s WASM=1" "SHELL:-s MODULARIZE=1" "SHELL:-s EXPORT_NAME='createDeEsser'" "SHELL:-s ALLOW_MEMORY_GROWTH=1" "SHELL:-s ENVIRONMENT='web,worker'" "SHELL:-s EXPORTED_RUNTIME_METHODS=['ccall','cwrap']" "SHELL:-s EXPORTED_FUNCTIONS=['_malloc','_free','_deesser_create','_deesser_destroy','_deesser_process','_deesser_set_frequency','_deesser_set_bandwidth','_deesser_set_threshold','_deesser_set_ratio','_deesser_set_attack','_deesser_set_release']" "SHELL:-s INITIAL_MEMORY=4194304" "SHELL:-s STACK_SIZE=262144" "SHELL:-s NO_EXIT_RUNTIME=1" "SHELL:-s FILESYSTEM=0" -O2)
